@@ -7,6 +7,10 @@ Notes on upgrading from an older release
 
 o Upgrading from a version prior to <release>:
 
+    - lib/pf/vlan.pm's fetchVlanForNode interface changed
+    If you built a customized version of this method in lib/pf/vlan/custom.pm
+    you will need to update it.
+
     - Meru Controller 3000 now named Meru Controller
     Since our code should work for all Meru Controllers, we renamed the module.
     Meru::MC3000 is now Meru::MC. If you upgrade make sure you update your 
