@@ -30,7 +30,7 @@ Olivier Bilodeau <obilodeau@inverse.ca>
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2010 Inverse inc.
+Copyright (C) 2006-2011 Inverse inc.
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -1081,7 +1081,7 @@ sub handleTrap {
                 {
                     if ( $locationlog[0]->{'mac'} =~ /^$mac$/i ) {
                         if (( $locationlog[0]->{'vlan'} == $vlan )
-                            && ($vlan == $vlan_obj->fetchVlanForNode($mac, $switch, $switch_port))
+                            && ($vlan == $vlan_obj->fetchVlanForNode($mac, $switch, $switch_port, WIRED_SNMP_TRAPS))
                            ) {
                             $logger->info(
                                 "locationlog is already up2date. Do nothing");
@@ -1102,8 +1102,7 @@ sub handleTrap {
                 }
 
                 if ( $changeVlan == 1 ) {
-                    node_determine_and_set_into_VLAN( $mac, $switch,
-                        $switch_port );
+                    node_determine_and_set_into_VLAN( $mac, $switch, $switch_port, WIRED_SNMP_TRAPS );
                 }
             }
         }
@@ -1269,7 +1268,9 @@ sub handleTrap {
                 $logger->debug("$oldPC has still open locationlog entry at $switch_ip ifIndex $switch_port. Closing it");
                 locationlog_update_end_mac($oldPC);
                 $logger->info("authorizing $trapMac (old entry $oldPC) at new location $switch_ip ifIndex $switch_port");
-                my $correctVlanForThisNode = $vlan_obj->fetchVlanForNode($trapMac, $switch, $switch_port);
+                my $correctVlanForThisNode = $vlan_obj->fetchVlanForNode(
+                    $trapMac, $switch, $switch_port, WIRED_SNMP_TRAPS
+                );
                 $switch->authorizeMAC( $switch_port, $oldPC, $trapMac, $switch->getVlan($switch_port), $correctVlanForThisNode );
 
                 #set the right VLAN
@@ -1294,7 +1295,9 @@ sub handleTrap {
                         $old_mac_to_remove = $old_mac;
                     }
                 }
-                my $correctVlanForThisNode = $vlan_obj->fetchVlanForNode($trapMac, $switch, $switch_port);
+                my $correctVlanForThisNode = $vlan_obj->fetchVlanForNode(
+                    $trapMac, $switch, $switch_port, WIRED_SNMP_TRAPS
+                );
                 if ( defined($old_mac_to_remove) ) {
                     $logger->info(
                         "authorizing $trapMac (old entry $old_mac_to_remove) at new location $switch_ip ifIndex $switch_port"
@@ -1552,7 +1555,7 @@ sub handleTrap {
             # }}}4
 
             # node_determine_and_set_into_VLAN {{{4
-            node_determine_and_set_into_VLAN( $mac, $switch, $switch_port );
+            node_determine_and_set_into_VLAN( $mac, $switch, $switch_port, WIRED_SNMP_TRAPS );
 
             # }}}4
             # }}}3
@@ -1610,7 +1613,7 @@ sub handleTrap {
                     );
 
                     my $hasPhone = $switch->hasPhoneAtIfIndex($switch_port);
-                    node_determine_and_set_into_VLAN( $mac, $switch, $switch_port );
+                    node_determine_and_set_into_VLAN( $mac, $switch, $switch_port, $connection_type );
 
                     # TODO extract that behavior in a method call in pf::vlan so it can be overridden easily
                     if ( !$hasPhone ) {
@@ -1817,7 +1820,7 @@ sub node_update_PF {
 
 # sub node_determine_and_set_into_VLAN {{{1
 sub node_determine_and_set_into_VLAN {
-    my ( $mac, $switch, $ifIndex ) = @_;
+    my ( $mac, $switch, $ifIndex, $connection_type ) = @_;
 
     my $logger = Log::Log4perl->get_logger('pfsetvlan::handling');
     Log::Log4perl::MDC->put( 'tid', threads->self->tid() );
@@ -1826,7 +1829,7 @@ sub node_determine_and_set_into_VLAN {
 
     $switch->setVlan(
         $ifIndex,
-        $vlan_obj->fetchVlanForNode($mac, $switch, $ifIndex),
+        $vlan_obj->fetchVlanForNode($mac, $switch, $ifIndex, $connection_type),
         \%switch_locker,
         $mac
     );
